--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="text" class="field" placeholder="Your name">
     <input type="email" class="field"placeholder="Your Email Addres">
     <input type="text" class="field" placeholder="Your Phone Number (optional)">
-    <input type="url" class="field" placeholder="Your Wbsite (optional)">
+    <input type="text" class="field" placeholder="Your Wbsite (optional)">
     <textarea class="message" placeholder="Type your message here..."></textarea>
     <button type="button">Submit</button>
 </div>
